# cantucci

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs  build.sh  server.py  watch.sh
.github/: check-basic-style.sh
.github/workflows/: ci.yml
ci/: check-basic-style.sh
core/: Cargo.toml
core/src/: lib.rs  math.rs  types.rs
core/src/shape/: mandelbulb.frag  mandelbulb.rs  mod.rs  sphere.rs
dfml/: Cargo.toml  simple.dfml
dfml/dfmlc/: main.rs
dfml/src/: ast.rs  errors.rs  hir.rs  lib.rs
dfml/src/base/: filemap.rs  mod.rs  pos.rs
dfml/src/diag/: mod.rs  print.rs  report.rs
dfml/src/lex/: mod.rs  token.rs
dfml/src/parse/: grammar.lalrpop
shader/: iso-surface.frag  iso-surface.vert  octree-debug-view.frag  octree-debug-view.vert  point-cloud-mandelbulb.frag  point-cloud-mandelbulb.vert  sky.frag  sky.vert  sun.frag  sun.vert
src/: app.rs  camera.rs  errors.rs  event.rs  index.html  index.js  lib.rs  main.rs  math.rs  mesh.rs  prelude.rs  sky.rs  to_arr.rs  util.rs  wgpu.rs
src/control/: fly.rs  mod.rs  orbit.rs
src/env/: mod.rs  sky.rs  sun.rs
src/mesh/: buffer.rs  mod.rs  octree.rs  renderer.rs  view.rs
src/mesh/buffer/: dist_map.rs  mod.rs
src/octree/: debug_view.rs  iter.rs  mod.rs
src/shaders/: dome.frag  dome.vert  sky.vert  surface.frag  surface.vert
src/shape/: bench.rs  mandelbulb.rs  mod.rs  shape.frag  sphere.rs  util.rs
src/sky/: dome.rs  mod.rs
src/util/: gl.rs  grid.rs  iter.rs  mod.rs  time.rs
