[package]
name = "cantucci"
version = "0.2.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
