[package]
name = "cantucci"
version = "0.1.0"
authors = [
    "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
    "Julian Kniephoff <me@juliankniephoff.com>",
]

[profile.dev]
opt-level = 1
codegen-units = 4

[dependencies]
bunt = "0.2.4"
cgmath = "0.18.0"
env_logger = "0.8.0"
error-chain = "0.9.0"
glium = "0.16.0"
log = "0.4.0"
num_cpus = "1.2.1"
threadpool = "1.3.2"
