[package]
name = "cantucci"
version = "0.1.0"
authors = [
    "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
    "Julian Kniephoff <me@juliankniephoff.com>",
]
edition = "2018"

[dependencies]
anyhow = "1"
bytemuck = "1"
cgmath = "0.18.0"
env_logger = "0.8.0"
futures = "0.3"
log = "0.4.0"
num_cpus = "1.2.1"
threadpool = "1.3.2"
wgpu = "0.6"
winit = "0.24"

[build-dependencies]
anyhow = "1"
shaderc = "0.7"
