[package]
name = "dfml"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
build = "build.rs"

[[bin]]
name = "dfmlc"
path = "dfmlc/main.rs"


[dependencies]
lalrpop-util = "0.12.5"
log = "0.3.7"
term-painter = "0.2.3"
error-chain = "0.10.0"

[build-dependencies]
lalrpop = "0.12.5"
